--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,11 @@
-set(CMAKE_CXX_FLAGS "-Wall -std=c++1y -pthread -DDEBUG_FD_LIVETIME -DDEBUG_TIMER -DDEBUG_PROXY_MAP")
+set(CMAKE_CXX_FLAGS "-Wall -std=c++1y -pthread")
 #-D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
 find_package(PkgConfig REQUIRED)
+find_package(Boost COMPONENTS system REQUIRED)
+pkg_check_modules(SSL openssl)
+
 
 include_directories(
 	${CMAKE_SOURCE_DIR}/include/
@@ -14,6 +17,12 @@ include_directories(
 
 add_executable(qcdump
 	main.cc
+)
+
+target_link_libraries(
+	qcdump
+	${Boost_SYSTEM_LIBRARY}
+	${SSL_LIBRARIES}
 )
 
 
