--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,9 @@ set(CMAKE_CXX_FLAGS "-Wall -std=c++1y -pthread")
 #-D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
+
+find_package(PkgConfig REQUIRED)
 find_package(LibEv REQUIRED)
-#find_package(PkgConfig REQUIRED)
 #pkg_check_modules(SSL openssl)
 
 include_directories(
